--- a/src/main/webapp/app/evento/crear-evento/evento.component.html
+++ b/src/main/webapp/app/evento/crear-evento/evento.component.html
@@ -10,6 +10,7 @@
     </h2>
     <jhi-alert></jhi-alert>
     <div class="row">
+        Hola
         <div class="col-sm-12">
             <form name="searchForm" class="form-inline">
                 <div class="input-group w-100 mt-3">
