--- a/src/main/webapp/app/entities/evento/evento-dialog.component.html
+++ b/src/main/webapp/app/entities/evento/evento-dialog.component.html
@@ -61,7 +61,7 @@
             <label class="form-control-label" jhiTranslate="trievegoApp.evento.categorias" for="field_categorias">Categorias</label>
             <select class="form-control" id="field_categorias" name="categorias" [(ngModel)]="evento.categorias" >
                 <option [ngValue]="null"></option>
-                <option [ngValue]="categoriaOption.id === evento.categorias?.id ? evento.categorias : categoriaOption" *ngFor="let categoriaOption of categorias; trackBy: trackCategoriaById">{{categoriaOption.id}}</option>
+                <option [ngValue]="categoriaOption.id === evento.categorias?.id ? evento.categorias : categoriaOption" *ngFor="let categoriaOption of categorias; trackBy: trackCategoriaById">{{categoriaOption.nombre}}</option>
             </select>
         </div>
         <div class="form-group">
@@ -74,7 +74,7 @@
         <div class="form-group">
             <label jhiTranslate="trievegoApp.evento.tags" for="field_tags">Tags</label>
             <select class="form-control" id="field_tags" multiple name="tags" [(ngModel)]="evento.tags">
-                <option [ngValue]="getSelected(evento.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.id}}</option>
+                <option [ngValue]="getSelected(evento.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.nombre}}</option>
             </select>
         </div>
     </div>
