--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -160,7 +160,7 @@
                         </a>
                     </li>
                     <li *ngSwitchCase="true">
-                        <a class="dropdown-item" routerLink="tags" routerLinkActive="active" (click)="collapseNavbar()">
+                        <a class="dropdown-item" routerLink="tagusuario" routerLinkActive="active" (click)="collapseNavbar()">
                             <i class="fa fa-th-list" aria-hidden="true"></i>
                             <span >Tags</span>
                             </a>
