--- a/src/main/webapp/app/tagusuario/tagusuario-delete-dialog.component.html
+++ b/src/main/webapp/app/tagusuario/tagusuario-delete-dialog.component.html
@@ -1,4 +1,4 @@
-<form name="deleteForm" (ngSubmit)="confirmDelete(tags.id)">
+<form name="deleteForm" (ngSubmit)="confirmDelete(tagusuario.id)">
     <div class="modal-header">
         <h4 class="modal-title" jhiTranslate="entity.delete.title">Confirm delete operation</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p jhiTranslate="trievegoApp.tag.delete.question" translateValues="{id: '{{tags.nombre}}'}">Are you sure you want to delete this Tag?</p>
+        <p jhiTranslate="trievegoApp.tag.delete.question" translateValues="{id: '{{tagusuario.nombre}}'}">Are you sure you want to delete this Tag?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
