--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -154,7 +154,7 @@
                 </a>
                 <ul class="dropdown-menu" ngbDropdownMenu>
                     <li *ngSwitchCase="true">
-                        <a class="dropdown-item" routerLink="eventos" routerLinkActive="active" (click)="collapseNavbar()">
+                        <a class="dropdown-item" routerLink="eventousuario" routerLinkActive="active" (click)="collapseNavbar()">
                             <i class="fa fa-th-list" aria-hidden="true"></i>
                             <span >Eventos</span>
                         </a>
