Funcionando creacion, busqueda y eliminación de tags

--- a/src/main/webapp/app/tagusuario/tagusuario.component.html
+++ b/src/main/webapp/app/tagusuario/tagusuario.component.html
@@ -14,7 +14,7 @@
             <form name="searchForm" class="form-inline">
                 <div class="input-group w-100 mt-3">
                     <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'trievegoApp.tag.home.search' | translate }}">
-                    <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
+                    <button class="input-group-append btn btn-info" (click)="searchTagusuario(currentSearch)">
                         <span class="fa fa-search"></span>
                     </button>
                     <button class="input-group-append btn btn-danger" (click)="clear()" *ngIf="currentSearch">
